fixed image problem (index pg)
Added a flex box to the landing part of the page.

Resolves the problem of image not fitting within the same line as the
text on the landing page when necessary.

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+#landing-container {
+	display: flex;
+}
+
 #landing{
 	font-family: 'Arvo', serif;
 	font-size:28px;
